add code snippets and elaborate on text

--- a/report.ipynb
+++ b/report.ipynb
@@ -174,7 +174,7 @@
     "\n",
     "<a id=\"marker-detection\"></a>\n",
     "##### Marker Detection\n",
-    "We used OpenCV's ArUco marker detection algorithm to find the key elements and their orientation within the terrain, specifically, the Thymio robot, the goal, and the corners of the map. These are searched for in the input $frame$ coming from the video feed as follows:\n",
+    "We used OpenCV's ArUco marker detection algorithm to find the key elements and their orientation within the terrain, specifically, the Thymio robot, the goal, and the corners of the map. The following code snipped, taken from the ```ArUcoMarkerDetector``` class illustrate how the markers are searched for in the input ```frame``` coming from the video feed.\n",
     "\n",
     "```Python\n",
     "gray = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)\n",
@@ -208,7 +208,7 @@
     "frame_markers = aruco.drawDetectedMarkers(frame.copy(), corners, ids)\n",
     "```\n",
     "\n",
-    "Based on this information, a transformation matrix is applied to the image to place the map corners into the corners of the image so that the map fills the entire video feed. The perspective transform is computed based on four (x, y) tuples and their corresponding destination (x_dest, y_dest) tuples. In our case, the for tuples are the respective outermost corner of each of the ArUco markers delimiting the map and the destination tuples are the corner locations of our grid.\n",
+    "Based on this information, a transformation matrix is applied to the image to place the map corners into the corners of the image so that the map fills the entire video feed. The perspective transform is computed based on four $(x, y)$ tuples and their corresponding ```destination_corners``` tuples. In our case, the four input tuples are the respective outermost corner of each of the ArUco markers delimiting the map and the destination tuples are the corner locations of our grid.\n",
     "\n",
     "```Python\n",
     "sorted_marker_positions = [marker_for_corner[i] for i in range(4)]\n",
@@ -237,11 +237,11 @@
     "    <em>Binary Image</em>\n",
     "</div>\n",
     "\n",
-    "The resulting image still contains some noise due to the black thymio sensors being detected as obstacles. This is resolved in the next step. \n",
+    "The resulting image still contains some noise due to the black thymio sensors being detected as obstacles. This can be observed in the top left corner and is resolved in the next step. \n",
     "\n",
     "<a id=\"grid-representation\"></a>\n",
     "##### 2D Grid Representation\n",
-    "Based on the information obtained in the previous steps, a 2D grid of cells is created. Each cell stores information about its status, indicating whether it is free, it is occupied by the Thymio (marked in green), the goal (marked in blue), or an obstacle (marked in black). \n",
+    "Based on the information obtained in the previous steps, a 2D grid of cells is created. Each cell stores information about its status, indicating whether it is free (marked in white), it is occupied by the Thymio (marked in green), the goal (marked in blue), or an obstacle (marked in black). \n",
     "\n",
     "After conversion, the 2D grid looks as follows:\n",
     "\n",
@@ -252,7 +252,28 @@
     "\n",
     "\n",
     "\n",
-    "Here, still, the map contains the noise from the black sensors of the Thymio and the ArUco markers of which some are not entirely erased from the map. This is solved by removing all obstacles that are detected to be small islands which results in the following:\n",
+    "Here, still, the map contains the noise from the black sensors of the Thymio and the ArUco markers of which some are not entirely erased from the map. This is solved by removing all obstacles that are detected to be small islands. For a given pixel with coordinates $(x, y)$, the check to see if it is an island with a radius smaller or equal to ```radius``` is done as follows:\n",
+    "```Python\n",
+    "def _check_if_cells_are_island(self, x, y, radius):\n",
+    "    \"\"\"\n",
+    "    Checks if the cells around the given cell island of size radius is an island\n",
+    "    :param x: the x coordinate of the cell\n",
+    "    :param y: the y coordinate of the cell\n",
+    "    :param radius: the radius of the island\n",
+    "    :return: True if the cells within the radius form an island, False otherwise\n",
+    "    \"\"\"\n",
+    "    count = 0\n",
+    "    for k in range(-radius, radius + 1):\n",
+    "        for l in range(-radius, radius + 1):\n",
+    "            if (0 <= y + k < self._height\n",
+    "                    and 0 <= x + l < self._width\n",
+    "                    and not (-radius < k < radius and -radius < l < radius)):\n",
+    "                if self._grid[y + k, x + l] == CellType.OBJECT:\n",
+    "                    count += 1\n",
+    "    return count < 2  # i.e., no neighbours of the island within the radius are objects -> island\n",
+    "```\n",
+    "\n",
+    "This pass through the map results in the following image with the noise removed:\n",
     "\n",
     "<div align=\"center\">\n",
     "    <img src=\"./report_images/image_processing_images/grid_map_islands_removed_not_increased.png\" alt=\"Grid Map with Islands Removed\">\n",
@@ -262,7 +283,7 @@
     "\n",
     "\n",
     "\n",
-    "Lastly, to account for the width of the Thymio, obstacles are artificially enlarged to ensure that the Thymio cannot drive too close to the obstacles. The resulting map looks as follows:\n",
+    "Lastly, to account for the width of the Thymio, obstacles are artificially enlarged to ensure that the Thymio cannot drive too close to the obstacles. In the path planning, the enlargement is considered as an obstacle which leads to the Thymio's path planning respecting the needed distance from the obstacles. The resulting map looks as follows:\n",
     "\n",
     "<div align=\"center\">\n",
     "    <img src=\"./report_images/image_processing_images/grid_map_islands_removed_objects_increased.png\" alt=\"[Grid Map with Object Size Increased\">\n",
@@ -295,11 +316,11 @@
     "\n",
     "<a id=\"dijkstra-algorithm\"></a>\n",
     "##### Dijkstra Algorithm\n",
-    "The shortest path is calculated using the Dijkstra algorithm. The resulting path ensures that the Thymio can navigate through the environment while avoiding obstacles and ensures that it efficiently reaches the goal.\n",
+    "The shortest path is calculated using the [Dijkstra algorithm](https://en.wikipedia.org/wiki/Dijkstra%27s_algorithm). The resulting path ensures that the Thymio can navigate through the environment while avoiding obstacles and ensures that it reaches the goal with the shortest path.\n",
     "\n",
     "<a id=\"path-discretization\"></a>\n",
     "##### Path Discretization\n",
-    "To have the Thymio drive more smoothly, the computed path is discretized into a series of fewer cells. Each cell represents a direction change in the path. The Thymio receives these cells as intermediate goals allowing a more natural movement along the path and decreasing the number of sudden direction changes. The resulting path is marked red in the map and the direction changes purple. With this addition, the grid image looks as follows:\n",
+    "To have the Thymio drive more smoothly, the computed path is discretized into a series of fewer cells. Each cell represents a direction change in the path. The Thymio receives these cells as intermediate goals allowing a more natural movement along the path and decreasing the number of sudden direction changes. The resulting path is marked red in the map and the direction changes purple. In this example, the Thymio robot's path would start at the top left at the green cell and end at the blue cell at the bottom right. With this addition, the grid looks as follows:\n",
     "\n",
     "<div align=\"center\">\n",
     "    <img src=\"./report_images/image_processing_images/grid_map_with_path.png\" alt=\"[Grid Map Marked with Path and Direction Changes\">\n",
@@ -781,7 +802,29 @@
     "\n",
     "The Thymio detects the object (here in blue) and deviates from the Global Path (in red), choosing to go on the *outside* of the path's turn, thus drawing a circle, here in orange.\n",
     "\n",
-    "Please note however that this image is never generated, as the camera and the computer are never aware of the local obstacle, this is only an illustration of a path possibly taken during local navigation."
+    "Please note, however, that this image is never generated, as the camera and the computer are never aware of the local obstacle, this is only an illustration of a path possibly taken during local navigation.\n",
+    "\n",
+    "##### Global Navigation Resumption\n",
+    "Once the Thymio arrives back on the path, global navigation takes over again. In order to account for the distance travelled, first the location of the Thymio on the path is found and, then, the intermediate goals are updated to account for having passed a variable number of them during local obstacle avoidance. This is handled in the following function in the ```DijkstraNavigation``` class:\n",
+    "```Python\n",
+    "def handle_local_navigation_exit(self, thymio_location):\n",
+    "    \"\"\"\n",
+    "    Handles the exit of local navigation and takeover of global navigation\n",
+    "    :param thymio_location: The Thymio's location\n",
+    "    :return: None\n",
+    "    \"\"\"\n",
+    "    x_thymio, y_thymio = thymio_location\n",
+    "\n",
+    "    self._next_direction_change_idx = 0\n",
+    "    x_dir_change, y_dir_change = self.map.direction_changes[self._next_direction_change_idx]\n",
+    "    for (x_path, y_path) in self.path:\n",
+    "        if x_path == x_dir_change and y_path == y_dir_change:\n",
+    "            self._next_direction_change_idx += 1\n",
+    "            x_dir_change, y_dir_change = self.map.direction_changes[self._next_direction_change_idx]\n",
+    "\n",
+    "        if x_path == x_thymio and y_path == y_thymio:\n",
+    "            break\n",
+    "```"
    ]
   },
   {
@@ -936,7 +979,10 @@
    "metadata": {},
    "source": [
     "<a id=\"video\"></a>\n",
-    "##### Video: "
+    "##### Video: \n",
+    "The following video illustrates the combination of the five main sections of this project. To illustrate the knowledge of the program, the right video feed shows the grid with all the elements. Additionally, the wanted current direction as well as the Thymio's current orientation are drawn on the map image.\n",
+    "\n",
+    "The left video feed shows the recording made by the camera with the transformation matrix applied. When the camera is covered by a paper, the locaiton and orientation are estimated by the Kalman filter based on the wheel speeds."
    ]
   },
   {
@@ -945,7 +991,13 @@
    "source": [
     "<div align=\"center\">\n",
     "    <video width=\"700\" controls autoplay loop src=\"./videos/Mobile_Robotics_Final_Demo_Video.mp4\" />\n",
-    "</div>\n"
+    "</div>\n",
+    "\n",
+    "<div align=\"center\">\n",
+    "    <em>Video Illustrating the Project Results</em>\n",
+    "</div>\n",
+    "\n",
+    "In case the video does not play (support issues for certain kernels), it can also be watched on [YouTube](https://youtu.be/gpMigWjB38A)"
    ]
   },
   {
