add code snippets for CV part

--- a/Group_T03_report.ipynb
+++ b/Group_T03_report.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Group 3 Mobile Robotics Report\n",
+    "## Mobile Robotics Report\n",
     "\n",
     "**Group Members**: Luca Engel, Marc Nassif,  Giuseppe De Carlo,  Giada Ehrlich\n",
     "\n"
@@ -79,7 +79,7 @@
    "source": [
     "In mobile robotics, fusing computer vision and sensor-based feedback is essential to establish reliable global navigation algorithms, motion control strategies, and sensor-based local obstacle avoidance to enable robots to intelligently and reliably navigate through dynamic environments. This report describes our effort to develop a solution that enables the Thymio robot to traverse a terrain containing obstacles and to reach a goal.\n",
     "\n",
-    "Our project integrates multiple technologies to improve the navigation precision. With the help of a video feed provided by a camera, computer vision is used to detect the map, the obstacles in the map, the Thymio robot, and the goal. Based on this information, a 2d grid of cells is constructed. The global navigation aspect employs the Dijkstra algorithm to calculate the shortest path from the Thymio to the goal, accounting for dynamically changing events, such as kidnapping where the Thymio or the goal are displaced. The motion control mechanism guided the Thymio along the calculated path which is discretized into intermediate points, facilitating a smooth and precise traversal. For local obstacle avoidance, the Thymio relies on its proximity sensors, allowing it to detect and navigate around obstacles not identified by the computer vision part. This ensures robust navigation, even when visual data is limited. The implementation of the Kalman filter for position and orientation estimation plays a pivotal role in this project. The filter combines information from the computer vision part and the wheel speeds of the Thymio to improve robustness of the navigation. The filter is even capable of functioning when the camera feed is obscured for a while, showing the robustness of our system.\n",
+    "Our project integrates multiple technologies to improve the navigation precision. With the help of a video feed provided by a camera, computer vision is used to detect the map, the obstacles in the map, the Thymio robot, and the goal. Based on this information, a 2d grid of cells is constructed. The global navigation aspect employs the Dijkstra algorithm to calculate the shortest path from the Thymio to the goal, accounting for dynamically changing events, such as kidnapping where the Thymio or the goal are displaced. The motion control mechanism guides the Thymio along the calculated path which is discretized into intermediate points, facilitating a smooth and precise traversal. For local obstacle avoidance, the Thymio relies on its proximity sensors, allowing it to detect and navigate around obstacles not identified by the computer vision part. This ensures robust navigation, even when visual data is limited. The implementation of the Kalman filter for position and orientation estimation plays a pivotal role in this project. The filter combines information from the computer vision part and the wheel speeds of the Thymio to improve the navigation precision. The filter is even capable of functioning when the camera feed is obscured for a while, showing the robustness of our system.\n",
     "\n",
     "This report details the design, implementation, and performance of our solution and shows how the combination of sensor data can drastically improve the capabilities and precision in robotic navigation."
    ]
@@ -104,9 +104,9 @@
     "\n",
     "### Method overview: \n",
     "\n",
-    "Thymio initially reads a global map from processed images acquired through the webcam. It subsequently extracts a path through global navigation and adheres to this route unless faced with kidnapping or local navigation triggers.\n",
+    "The program initially creates a global map after processing video frames acquired through the webcam. It subsequently extracts a path through global navigation and adheres to this route unless faced with kidnapping or local navigation triggers.\n",
     "\n",
-    "The provided schema illustrates the code structure implemented for this purpose. In cases where the camera becomes obscured, the robot continues to follow the pre-defined global path planning until the camera sensing functionality is restored."
+    "The provided schema illustrates the code structure implemented for this purpose. In cases where the camera becomes obscured, thanks to the Kalman Filter, the robot continues to follow the pre-defined global path planning based on the wheel speeds until the camera sensing functionality is restored."
    ]
   },
   {
@@ -141,7 +141,7 @@
     "\n",
     "<div align=\"center\">\n",
     "    <img src=\"./report_images/set_image.png\" alt=\"Image Alt Text\" width=\"300\" height=\"400\"/>\n",
-    "    <em>Set Up</em>\n",
+    "    <em>Environment Setup</em>\n",
     "</div>"
    ]
   },
@@ -174,7 +174,7 @@
     "\n",
     "<a id=\"marker-detection\"></a>\n",
     "##### Marker Detection\n",
-    "We used OpenCV's ArUco marker detection algorithm to find the key elements and their orientation within the terrain, specifically, the Thymio robot, the goal, and the corners of the map. The following code snipped, taken from the ```ArUcoMarkerDetector``` class illustrate how the markers are searched for in the input ```frame``` coming from the video feed.\n",
+    "We used OpenCV's ArUco marker detection algorithm to find the key elements and their orientation within the terrain, specifically, the Thymio robot, the goal, and the corners of the map. The following code snipped, taken from the ```ArUcoMarkerDetector``` class illustrate how the markers are searched for in the input ```frame``` coming from the video feed. Once the markers are detected, our algorithm also extracts theyr orientation. This is used to find the orientation of the Thymio robot for navigation purposes.\n",
     "\n",
     "```Python\n",
     "gray = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)\n",
@@ -186,6 +186,7 @@
     "\n",
     "ids_to_direction = {}\n",
     "\n",
+    "# [This part extracts the direction the markers are pointing to]\n",
     "if ids is not None:\n",
     "    corners = np.array(corners)\n",
     "    ids = np.array(ids)\n",
@@ -208,7 +209,7 @@
     "frame_markers = aruco.drawDetectedMarkers(frame.copy(), corners, ids)\n",
     "```\n",
     "\n",
-    "Based on this information, a transformation matrix is applied to the image to place the map corners into the corners of the image so that the map fills the entire video feed. The perspective transform is computed based on four $(x, y)$ tuples and their corresponding ```destination_corners``` tuples. In our case, the four input tuples are the respective outermost corner of each of the ArUco markers delimiting the map and the destination tuples are the corner locations of our grid.\n",
+    "Based on this information, a transformation matrix is applied to the image to place the map corners into the corners of the image so that the map fills the entire video feed. The perspective transform is computed by OpenCV's ```getPerspectiveTransform``` function based on four $(x, y)$ tuples and their corresponding ```destination_corners``` tuples. In our case, the four input tuples are the respective outermost corner of each of the ArUco markers delimiting the map and the destination tuples are the corner locations of our grid.\n",
     "\n",
     "```Python\n",
     "sorted_marker_positions = [marker_for_corner[i] for i in range(4)]\n",
@@ -221,7 +222,26 @@
     "base_frame, corners, processed_frame = self._transform_images(base_frame, corners, frame_markers, h, processed_frame, w)\n",
     "```\n",
     "\n",
-    "The resulting processed image containing the framed ArUco markers is displayed below.\n",
+    "Once the transformation matrix is computed our ```_transform_images``` function applies this transformation to the image feed and the elements displayed on it with OpenCV's ```warpPerspective``` function as follows:\n",
+    "```Python\n",
+    "def _transform_images(self, base_frame, corners, frame_markers, h, processed_frame, w):\n",
+    "    \"\"\"\n",
+    "    Transform the base frame and the frame with markers drawn on it to place the corner markers in the frame corners.\n",
+    "    :param base_frame: base frame\n",
+    "    :param corners: markers' corners\n",
+    "    :param frame_markers: frame with markers drawn on it\n",
+    "    :param h: height of the frame\n",
+    "    :param processed_frame: frame to be transformed\n",
+    "    :param w: width of the frame\n",
+    "    :return: base frame, transformed corners, transformed frame with markers drawn on it\n",
+    "    \"\"\"\n",
+    "    processed_frame = cv2.warpPerspective(frame_markers, self.transformation_matrix, (w, h))\n",
+    "    base_frame = cv2.warpPerspective(base_frame, self.transformation_matrix, (w, h))\n",
+    "    corners = cv2.perspectiveTransform(corners.reshape(-1, 1, 2), self.transformation_matrix).reshape(corners.shape)\n",
+    "    return base_frame, corners, processed_frame\n",
+    "    \n",
+    "```\n",
+    "The resulting processed image containing the framed ArUco markers and their orientation arrows is displayed below.\n",
     "\n",
     "<div align=\"center\">\n",
     "    <img src=\"./report_images/image_processing_images/normal_feed_img.png\" alt=\"Processed Image with Map Filling the Entire Screen\">\n",
@@ -230,7 +250,23 @@
     "\n",
     "<a id=\"thresholding\"></a>\n",
     "##### Grayscale Conversion and Thresholding\n",
-    "To simplify the object detection, we converted the camera feed to grayscale. As the objects are represented as black shaped, applying thresholding to the image allowed for easy extraction of their location in the environment.\n",
+    "To simplify the object detection, we converted the camera feed to grayscale. As the objects are represented as black shaped, applying thresholding to the image allowed for easy extraction of their location in the environment. The following code is responsible for extracting the binary image which is also displayed below.\n",
+    "\n",
+    "```Python\n",
+    "def _extract_black_objects(self, frame):\n",
+    "    \"\"\"\n",
+    "    Extract the black objects from a frame.\n",
+    "    :param frame: The frame to extract the black objects from.\n",
+    "    :return: The binary image with black objects on a white background.\n",
+    "    \"\"\"\n",
+    "    gray_frame = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)\n",
+    "\n",
+    "    # Threshold the image to get binary image with black objects on white background\n",
+    "    # binary image is 0 where no black object is detected, 255 where black object is detected\n",
+    "    _, binary_image = cv2.threshold(gray_frame, OBJECT_THRESHOLD, THRESHOLD_MAX_VAL, cv2.THRESH_BINARY_INV)\n",
+    "\n",
+    "    return binary_image \n",
+    "```\n",
     "\n",
     "<div align=\"center\">\n",
     "    <img src=\"./report_images/image_processing_images/binary_img.png\" alt=\"Binary Image\">\n",
