Added header to report

--- a/Group_T03_report.ipynb
+++ b/Group_T03_report.ipynb
@@ -7,7 +7,10 @@
     "## Mobile Robotics Report\n",
     "\n",
     "**Group Members**: Luca Engel, Marc Nassif,  Giuseppe De Carlo,  Giada Ehrlich\n",
-    "\n"
+    "\n",
+    "**Course**: Basics of Mobile Robotics, MICRO-452, Prof. Francesco Mondada\n",
+    "\n",
+    "Written on Dec 7th, 2023."
    ]
   },
   {
@@ -83,9 +86,9 @@
    "source": [
     "In mobile robotics, fusing computer vision and sensor-based feedback is essential to establish reliable global navigation algorithms, motion control strategies, and sensor-based local obstacle avoidance to enable robots to intelligently and reliably navigate through dynamic environments. This report describes our effort to develop a solution that enables the Thymio robot to traverse a terrain containing obstacles and to reach a goal.\n",
     "\n",
-    "Our project integrates multiple technologies to improve the navigation precision. With the help of a video feed provided by a camera, computer vision is used to detect the map, the obstacles in the map, the Thymio robot, and the goal. Based on this information, a 2d grid of cells is constructed. The global navigation aspect employs the Dijkstra algorithm to calculate the shortest path from the Thymio to the goal, accounting for dynamically changing events, such as kidnapping where the Thymio or the goal are displaced. The motion control mechanism guides the Thymio along the calculated path which is discretized into intermediate points, facilitating a smooth and precise traversal. For local obstacle avoidance, the Thymio relies on its proximity sensors, allowing it to detect and navigate around obstacles not identified by the computer vision part. This ensures robust navigation, even when visual data is limited. The implementation of the Kalman filter for position and orientation estimation plays a pivotal role in this project. The filter combines information from the computer vision part and the wheel speeds of the Thymio to improve the navigation precision. The filter is even capable of functioning when the camera feed is obscured for a while, showing the robustness of our system.\n",
+    "Our project integrates multiple technologies to improve the navigation precision. With the help of a video feed provided by a camera, computer vision is used to detect the map, the obstacles in the map, the Thymio robot, and the goal. Based on this information, a 2d grid of cells is constructed. The global navigation aspect employs the Dijkstra algorithm to calculate the shortest path from the Thymio to the goal, accounting for dynamically changing events, such as kidnapping where the Thymio or the goal are displaced. The motion control mechanism guides the Thymio along the calculated path which is discretized into intermediate points, facilitating a smooth traversal. For local obstacle avoidance, the Thymio relies on its proximity sensors, allowing it to detect and navigate around obstacles not identified by the computer vision part. The implementation of the Kalman filter for position and orientation estimation plays a pivotal role in this project. The filter combines information from the computer vision part and the wheel speeds of the Thymio to improve the navigation precision. The filter is even capable of functioning when the camera feed is obscured for a while, showing the robustness of our system, ensuring proper navigation, even when visual data is limited\n",
     "\n",
-    "This report details the design, implementation, and performance of our solution and shows how the combination of sensor data can drastically improve the capabilities and precision in robotic navigation."
+    "This report details the design, implementation, and performance of our solution and shows how the combination of different data coming from different sources can improve the capabilities and precision in robotic navigation."
    ]
   },
   {
@@ -101,10 +104,18 @@
    "metadata": {},
    "source": [
     "### Libraries required: \n",
-    "- NumPy\n",
-    "- tmdclient\n",
-    "- OpenCV\n",
-    "- FilterPy\n",
+    "- `NumPy`\n",
+    "- `tmdclient`\n",
+    "- `OpenCV`\n",
+    "- `cv2`\n",
+    "- `FilterPy`\n",
+    "- `enum`\n",
+    "- `math`\n",
+    "- `os`\n",
+    "- `queue`\n",
+    "- `datetime`\n",
+    "\n",
+    "In order to run the demo in this notebook, please have the notebook in the same directory as the provided folders of python modules.\n",
     "\n",
     "### Method overview: \n",
     "\n",
