--- a/Group_T03_report.ipynb
+++ b/Group_T03_report.ipynb
@@ -432,7 +432,7 @@
     "</div>\n",
     "\n",
     "\n",
-    "As we observe in the picture, the ROTATE mode calculates the error between the desired angle and the Thymio's actual angle. The Thymio receives the shortest turning direction to align itself with the desired angle, and rotates on its axis to start the correction. Find below the code snippet, taken from the `pi_regulation` method of `MotionControl`'s `Motion` class.\n",
+    "As we observe in the picture, the ROTATE mode calculates the error between the desired angle and the Thymio's actual angle. The Thymio receives the shortest turning direction to align itself with the desired angle, and rotates on its axis to start the correction. Find below the code snippet, taken from the `motion_regulation` method of `MotionControl`'s `Motion` class.\n",
     "```python\n",
     "# Movement at Rotate means that the robot need to rotate to face the next point\n",
     "elif movement == ROTATE:\n",
@@ -457,7 +457,7 @@
     "\n",
     "When the Thymio has reached the correct angle, (either as signaled by the camera, or estimated by Kalman filtering), the Thymio will execute the MOVE command towards the next point.\n",
     "\n",
-    "Find below the code snippet, aslo from `pi_regulation`, deciding on state transition:\n",
+    "Find below the code snippet, aslo from `motion_regulation`, deciding on state transition:\n",
     "```python\n",
     " if (change_idx != self.change_idx and abs(self._total_actual_angle - self._total_wanted_angle) > TRANSITION_ANGLE):\n",
     "            movement = ROTATE\n",
@@ -481,7 +481,7 @@
     "     \n",
     "As explained before, the PI controller is active during the robot's movement, except when it enters obstacle avoidance, managed by *Local Navigation*. Our regulator parameters, *Kp* and *Ki*, were tuned experimentally, by observing how the robot corrected its error with small gains, and progressively increased the values of our gains to achieve a smooth and dynamic correction. Finally, we obtanied satisfactory results with a *Kp = 3* and a *Ki = 0.2*.\n",
     "\n",
-    "We implemented a parameter, called *sum_error_max* to avoid wheel drift during the movement, from integrator error saturation. The maximum value was determined experimentally, similar to the regulator parameters, to mix good dynamics and avoid overshoot and jerky behaviour from integral windup. This is also provided below as a snippet from `pi_regulation`:\n",
+    "We implemented a parameter, called *sum_error_max* to avoid wheel drift during the movement, from integrator error saturation. The maximum value was determined experimentally, similar to the regulator parameters, to mix good dynamics and avoid overshoot and jerky behaviour from integral windup. This is also provided below as a snippet from `motion_regulation`:\n",
     "\n",
     "```python\n",
     "# movement at Move means that the robot is achieving the next point\n",
@@ -580,7 +580,7 @@
     "\n",
     "A similar approach was taken in the orientation estimation of our [Kalman Filter](#handling-orientation-jumps) implementation to prevent the camera's orientation estimation from dramatically changing predictions due to such angle jumps.\n",
     "\n",
-    "Find below the relevant code snippet considering angle manipulations from `MotionControl`, also taken from `pi_regulation`:\n",
+    "Find below the relevant code snippet considering angle manipulations from `MotionControl`, also taken from `motion_regulation`:\n",
     "\n",
     "```python\n",
     "if abs(actual_angle - self._last_actual_angle) > ANGLE_JUMP_TOLERANCE:\n",
@@ -1125,7 +1125,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
