--- a/Group_T03_report.ipynb
+++ b/Group_T03_report.ipynb
@@ -20,47 +20,38 @@
     "## Table of contents\n",
     "1. [Introduction](#introduction)\n",
     "2. [Setup](#setup)\n",
+    "    - 2.1 [Libraries Required](#libraries_required)\n",
+    "    - 2.2 [Method Overview](#method_overview)\n",
     "3. [Implementation](#implementation)\n",
-    "      - 3.1 [Vision](#vision)\n",
-    "         -  [Marker Detection](#marker-detection)\n",
-    "         -  [Grayscale Conversion and Thresholding](#thresholding)\n",
-    "         - [2D Grid Representation](#grid-representation)\n",
-    "         - [Dynamic Updates](#dynamic-updates)\n",
-    "      - 3.2 [Global Navigation](#global-navigation)\n",
-    "         -  [Dijkstra Algorithm](#dijkstra-algorithm)\n",
-    "         -  [Path Discretization](#path-discretization)\n",
-    "         -  [Integration with Vision System](#integration-vision)\n",
-    "      - 3.3 [Motion Control](#motion-control)\n",
-    "         -  [Direction calculation](#direction-calculation)\n",
-    "         -  [Rotate](#rotate)\n",
-    "         -  [Move](#move)\n",
-    "         -  [Movement Schematic](#movement-schematic)\n",
-    "         -  [Orientation Angle Challenges](#orientation-angle-challenges)\n",
-    "      - 3.4 [Local Navigation](#local-navigation)\n",
-    "         - [Judge Severity](#judge-severity)\n",
-    "         - [Rotation](#rotation)\n",
-    "         - [Circling](#circling)\n",
-    "         - [Global Navigation Resumption](#global-navigation-resumption)\n",
-    "      - 3.5 [Kalman Filter](#kalman-filter)\n",
-    "         - [Wheel Speed Measurements](#wheel-speed-measurements)\n",
-    "         - [Prediction and Update Step](#prediction-update-step)\n",
-    "         - [Handling Orientation Jumps](#handling-orientation-jumps)\n",
-    "         - [Adaptability to Vision Feed Cut-Off](#adaptability-vision)\n",
-    "         \n",
+    "    - 3.1 [Vision](#vision)\n",
+    "        - 3.1.1 [Marker Detection](#marker-detection)\n",
+    "        - 3.1.2 [Grayscale Conversion and Thresholding](#thresholding)\n",
+    "        - 3.1.3 [2D Grid Representation](#grid-representation)\n",
+    "        - 3.1.4 [Dynamic Updates](#dynamic-updates)\n",
+    "    - 3.2 [Global Navigation](#global-navigation)\n",
+    "        - 3.2.1 [Dijkstra Algorithm](#dijkstra-algorithm)\n",
+    "        - 3.2.2 [Path Discretization](#path-discretization)\n",
+    "        - 3.2.3 [Integration with Vision System](#integration-vision)\n",
+    "    - 3.3 [Motion Control](#motion-control)\n",
+    "        - 3.3.1 [Direction calculation](#direction-calculation)\n",
+    "        - 3.3.2 [Rotate](#rotate)\n",
+    "        - 3.3.3 [Move](#move)\n",
+    "        - 3.3.4 [Movement Schematic](#movement-schematic)\n",
+    "        - 3.3.5 [Orientation Angle Challenges](#orientation-angle-challenges)\n",
+    "    - 3.4 [Local Navigation](#local-navigation)\n",
+    "        - 3.4.1 [Judge Severity](#judge-severity)\n",
+    "        - 3.4.2 [Rotation](#rotation)\n",
+    "        - 3.4.3 [Circling](#circling)\n",
+    "        - 3.4.4 [Global Navigation Resumption](#global-navigation-resumption)\n",
+    "    - 3.5 [Kalman Filter](#kalman-filter)\n",
+    "        - 3.5.1 [Wheel Speed Measurements](#wheel-speed-measurements)\n",
+    "        - 3.5.2 [Prediction and Update Step](#prediction-update-step)\n",
+    "        - 3.5.3 [Handling Orientation Jumps](#handling-orientation-jumps)\n",
+    "        - 3.5.4 [Adaptability to Vision Feed Cut-Off](#adaptability-vision)\n",
     "4. [Results](#results)\n",
-    "   - 4.1 [Video](#video)\n",
-    "   - 4.2 [Run Demo](#demo)\n",
-    "   \n",
-    "5. [References](#references)\n",
-    " \n",
-    "\n",
-    "\n",
-    "   \n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "    - 4.1 [Video](#video)\n",
+    "    - 4.2 [Run Demo](#demo)\n",
+    "5. [References](#references)\n"
    ]
   },
   {
@@ -103,7 +94,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Libraries required: \n",
+    "<a id=\"libraries_required\"></a>\n",
+    "### 2.1 Libraries required: \n",
     "- `NumPy`\n",
     "- `tmdclient`\n",
     "- `OpenCV`\n",
@@ -117,7 +109,8 @@
     "\n",
     "In order to run the demo in this notebook, please have the notebook in the same directory as the provided folders of python modules.\n",
     "\n",
-    "### Method overview: \n",
+    "<a id=\"method_overview\"></a>\n",
+    "### 2.2 Method Overview: \n",
     "\n",
     "The program initially creates a global map after processing video frames acquired through the webcam. It subsequently extracts a path through global navigation and adheres to this route unless faced with kidnapping or local navigation triggers.\n",
     "\n",
@@ -535,7 +528,7 @@
     "```\n",
     "\n",
     "<a id=\"movement-schematic\"></a> \n",
-    "##### Schematic of the Movement\n",
+    "##### Movement Schematic\n",
     "Finally, you can observe, with the next schematic, how our Thymio's motion control is configure to perform its mission.\n",
     "<div align=\"center\">\n",
     "    <img src=\"./report_images/BOMR_MotionStep.PNG\" alt=\"Schematic of the Movement\">\n",
@@ -1069,7 +1062,7 @@
    "metadata": {},
    "source": [
     "<a id=\"demo\"></a>\n",
-    "# Run Demo"
+    "# 5 Run Demo"
    ]
   },
   {
