add missing sub-sub titles

--- a/Group_T03_report.ipynb
+++ b/Group_T03_report.ipynb
@@ -45,9 +45,11 @@
     "        - 3.4.4 [Global Navigation Resumption](#global-navigation-resumption)\n",
     "    - 3.5 [Kalman Filter](#kalman-filter)\n",
     "        - 3.5.1 [Wheel Speed Measurements](#wheel-speed-measurements)\n",
-    "        - 3.5.2 [Prediction and Update Step](#prediction-update-step)\n",
-    "        - 3.5.3 [Handling Orientation Jumps](#handling-orientation-jumps)\n",
-    "        - 3.5.4 [Adaptability to Vision Feed Cut-Off](#adaptability-vision)\n",
+    "        - 3.5.2 [Camera Input](#camera-input)\n",
+    "        - 3.5.3 [Prediction and Update Step](#prediction-update-step)\n",
+    "        - 3.5.4 [Handling Orientation Jumps](#handling-orientation-jumps)\n",
+    "        - 3.5.5 [Adaptability to Vision Feed Cut-Off](#adaptability-vision)\n",
+    "        - 3.5.6 [Choice of Matrices](#choice-of-matrices)\n",
     "4. [Results](#results)\n",
     "    - 4.1 [Video](#video)\n",
     "    - 4.2 [Run Demo](#demo)\n",
@@ -107,7 +109,7 @@
     "- `queue`\n",
     "- `datetime`\n",
     "\n",
-    "In order to run the demo in this notebook, please have the notebook in the same directory as the provided folders of python modules.\n",
+    "In order to [run the demo](#demo) in this notebook, please have the notebook in the same directory as the provided packages with the python modules.\n",
     "\n",
     "<a id=\"method_overview\"></a>\n",
     "### 2.2 Method Overview: \n",
