add text in results

--- a/Group_T03_report.ipynb
+++ b/Group_T03_report.ipynb
@@ -1072,9 +1072,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "In this project, we applied the key concepts learned in this course. \n",
+    "\n",
     "The image processing and vision components demonstrated robustness, consistently delivering precise results in obstacle detection, Thymio identification, and goal localization.\n",
     "\n",
-    "In terms of navigation, Dijkstra's algorithm efficiently derived optimized paths, allowing the Thymio to traverse from the starting point to the goal with notable efficiency. The implementation of Local Navigation further enhanced the system's capabilities, enabling it to detect and navigate around obstacles not visible to the camera while maintaining a path to the goal.\n",
+    "In terms of navigation, Dijkstra's algorithm efficiently derived optimized paths, allowing the Thymio to traverse from the starting point to the goal with notable efficiency. \n",
+    "\n",
+    "The implementation of Local Navigation further enhanced the system's capabilities, enabling it to detect and navigate around obstacles not visible to the camera while maintaining a path to the goal.\n",
+    "\n",
+    "The implemented Motion Control allowed for precise navigation and correction when following the computed path by using a PI controller.\n",
     "\n",
     "The primary challenge confronted by the system involved accurately representing angles within the \\[0, 360) range, for both filtering and motion control. Our solution was effective in preventing navigation issues in the Kalman Filter and in Motion Control resulting from angle jumps.\n",
     "\n",
